[gd_scene load_steps=5 format=3 uid="uid://dpl887j0d4nbi"]

[ext_resource type="PackedScene" uid="uid://dytye1t2s20f3" path="res://ui/common_gui_container.tscn" id="1_8g8fj"]
[ext_resource type="Script" path="res://websocket/client_console.gd" id="2_1auqm"]
[ext_resource type="PackedScene" uid="uid://7qmpvrsaighs" path="res://websocket/web_socket_client.tscn" id="3_268hq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fcyhn"]
bg_color = Color(0.12, 0.12, 0.12, 0.741176)

[node name="ClientConsole" instance=ExtResource("1_8g8fj")]
script = ExtResource("2_1auqm")

[node name="WebSocketClient" parent="." index="0" instance=ExtResource("3_268hq")]

[node name="Label" parent="Content" index="0"]
text = "Console"

[node name="HostField" type="HBoxContainer" parent="Content" index="2"]
layout_mode = 2

[node name="Host" type="LineEdit" parent="Content/HostField" index="0"]
layout_mode = 2
size_flags_horizontal = 3
text = "ws://localhost:8765"
placeholder_text = "please input host url"

[node name="ConnectButton" type="Button" parent="Content/HostField" index="1"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
toggle_mode = true
text = "Connect"

[node name="Logs" type="RichTextLabel" parent="Content" index="3"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_fcyhn")
scroll_following = true

[connection signal="connected_to_server" from="WebSocketClient" to="." method="_on_client_connected_to_server"]
[connection signal="connection_closed" from="WebSocketClient" to="." method="_on_client_connection_closed"]
[connection signal="message_received" from="WebSocketClient" to="." method="_on_client_message_received"]
[connection signal="toggled" from="Content/HostField/ConnectButton" to="." method="_on_connect_button_toggled"]
